parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID TWOPOINTS program_classes MAIN add_class LBRACE program_body init RBRACE END
Rule 2     program_classes -> classes
Rule 3     program_classes -> empty
Rule 4     program_body -> program_body_vars program_body_funct
Rule 5     program_body_vars -> dec_vars
Rule 6     program_body_vars -> empty
Rule 7     program_body_funct -> functions
Rule 8     program_body_funct -> empty
Rule 9     dec_vars -> VAR dec_vars_aux
Rule 10    dec_vars_aux -> simple_type vars_simple_type SEMICOLON
Rule 11    dec_vars_aux -> simple_type vars_simple_type SEMICOLON dec_vars_aux
Rule 12    dec_vars_aux -> complex_type vars_complex_type SEMICOLON
Rule 13    dec_vars_aux -> complex_type vars_complex_type SEMICOLON dec_vars_aux
Rule 14    vars_complex_type -> ID
Rule 15    vars_complex_type -> ID COMMA vars_complex_type
Rule 16    vars_simple_type -> ID add_variable
Rule 17    vars_simple_type -> ID add_variable COMMA vars_simple_type
Rule 18    vars_simple_type -> ID vars_simple_type_aux
Rule 19    vars_simple_type -> ID vars_simple_type_aux COMMA vars_simple_type
Rule 20    vars_simple_type_aux -> LBRACKET CTEI RBRACKET add_array_variable
Rule 21    vars_simple_type_aux -> LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET add_matrix_variable
Rule 22    simple_type -> INT
Rule 23    simple_type -> FLOAT
Rule 24    simple_type -> CHAR
Rule 25    complex_type -> ID
Rule 26    classes -> CLASS ID classes_aux
Rule 27    classes -> CLASS ID classes_aux classes
Rule 28    classes_aux -> add_class LBRACE dec_vars functions RBRACE
Rule 29    classes_aux -> add_class LBRACE functions RBRACE
Rule 30    classes_aux -> INHERITS ID add_inherit_class LBRACE dec_vars functions RBRACE
Rule 31    classes_aux -> INHERITS ID add_inherit_class LBRACE functions RBRACE
Rule 32    functions -> FUNCT functions_aux
Rule 33    functions -> FUNCT functions_aux functions
Rule 34    functions_aux -> VOID ID add_function LPAREN params RPAREN body
Rule 35    functions_aux -> VOID ID add_function LPAREN RPAREN body
Rule 36    functions_aux -> simple_type ID add_function LPAREN RPAREN body
Rule 37    functions_aux -> simple_type ID add_function LPAREN params RPAREN body
Rule 38    params -> simple_type ID add_variable
Rule 39    params -> simple_type ID add_variable COMMA params
Rule 40    params -> simple_type ID params_aux
Rule 41    params -> simple_type ID params_aux COMMA params
Rule 42    params_aux -> LBRACKET RBRACKET add_array_var_params
Rule 43    params_aux -> LBRACKET RBRACKET LBRACKET RBRACKET add_matrix_var_params
Rule 44    body -> LBRACE dec_vars statutes_aux RBRACE
Rule 45    body -> LBRACE statutes_aux RBRACE
Rule 46    body -> LBRACE statutes_aux RETURN ID SEMICOLON RBRACE
Rule 47    body -> LBRACE dec_vars statutes_aux RETURN ID SEMICOLON RBRACE
Rule 48    statutes -> ASSIGN assignation SEMICOLON
Rule 49    statutes -> CALL call SEMICOLON
Rule 50    statutes -> read
Rule 51    statutes -> write
Rule 52    statutes -> condition
Rule 53    statutes -> while
Rule 54    statutes -> for
Rule 55    statutes_aux -> statutes
Rule 56    statutes_aux -> statutes statutes_aux
Rule 57    assignation -> var EQUAL exp
Rule 58    var -> ID push_var
Rule 59    var -> ID var_aux
Rule 60    var_aux -> POINT ID
Rule 61    var_aux -> POINT ID var_aux_2
Rule 62    var_aux -> var_aux_2
Rule 63    var_aux_2 -> LBRACKET exp RBRACKET
Rule 64    var_aux_2 -> LBRACKET exp RBRACKET LBRACKET exp RBRACKET
Rule 65    call -> ID LPAREN RPAREN
Rule 66    call -> ID POINT ID LPAREN RPAREN
Rule 67    call -> ID LPAREN call_aux RPAREN
Rule 68    call -> ID POINT ID LPAREN call_aux RPAREN
Rule 69    call_aux -> exp
Rule 70    call_aux -> exp COMMA call_aux
Rule 71    condition -> IF condition_aux
Rule 72    condition_aux -> LPAREN exp RPAREN THEN LBRACE statutes_aux RBRACE condition_aux_3
Rule 73    condition_aux -> condition_aux_2
Rule 74    condition_aux_2 -> LPAREN exp RPAREN THEN LBRACE statutes_aux RBRACE ELIF condition_aux
Rule 75    condition_aux_3 -> ELSE LBRACE statutes_aux RBRACE
Rule 76    condition_aux_3 -> empty
Rule 77    read -> READ LPAREN var RPAREN SEMICOLON
Rule 78    write -> WRITE LPAREN write_aux RPAREN SEMICOLON
Rule 79    write_aux -> exp
Rule 80    write_aux -> exp COMMA write_aux
Rule 81    write_aux -> CTESTRING
Rule 82    write_aux -> CTESTRING COMMA write_aux
Rule 83    while -> WHILE LPAREN exp RPAREN DO LBRACE statutes_aux RBRACE
Rule 84    for -> FROM LPAREN assignation RPAREN UNTIL LPAREN exp RPAREN DO LBRACE statutes_aux RBRACE
Rule 85    exp -> n_exp
Rule 86    exp -> n_exp OR push_op exp pop_op
Rule 87    n_exp -> l_exp
Rule 88    n_exp -> l_exp AND push_op n_exp pop_op
Rule 89    l_exp -> a_exp
Rule 90    l_exp -> a_exp RELOP push_op a_exp pop_op
Rule 91    a_exp -> term
Rule 92    a_exp -> term PLUS push_op a_exp pop_op
Rule 93    a_exp -> term MINUS push_op a_exp pop_op
Rule 94    term -> factor
Rule 95    term -> factor TIMES push_op term pop_op
Rule 96    term -> factor DIVIDE push_op term pop_op
Rule 97    factor -> LPAREN push_paren exp RPAREN pop_paren
Rule 98    factor -> call
Rule 99    factor -> factor_aux
Rule 100   factor_aux -> cte
Rule 101   factor_aux -> PLUS cte
Rule 102   factor_aux -> MINUS cte
Rule 103   cte -> var
Rule 104   cte -> CTEI push_var
Rule 105   cte -> CTEF push_var
Rule 106   cte -> CTECHAR push_var
Rule 107   init -> INIT add_init LBRACE statutes_aux RBRACE
Rule 108   init -> INIT add_init LBRACE dec_vars statutes_aux RBRACE
Rule 109   empty -> <empty>
Rule 110   add_variable -> <empty>
Rule 111   add_array_variable -> <empty>
Rule 112   add_matrix_variable -> <empty>
Rule 113   add_array_var_params -> <empty>
Rule 114   add_matrix_var_params -> <empty>
Rule 115   add_function -> <empty>
Rule 116   add_init -> <empty>
Rule 117   add_class -> <empty>
Rule 118   add_inherit_class -> <empty>
Rule 119   push_var -> <empty>
Rule 120   push_op -> <empty>
Rule 121   pop_op -> <empty>
Rule 122   push_paren -> <empty>
Rule 123   pop_paren -> <empty>

Terminals, with rules where they appear

AND                  : 88
ASSIGN               : 48
CALL                 : 49
CHAR                 : 24
CLASS                : 26 27
COMMA                : 15 17 19 39 41 70 80 82
CTECHAR              : 106
CTEF                 : 105
CTEI                 : 20 21 21 104
CTESTRING            : 81 82
DIVIDE               : 96
DO                   : 83 84
ELIF                 : 74
ELSE                 : 75
END                  : 1
EQUAL                : 57
FLOAT                : 23
FROM                 : 84
FUNCT                : 32 33
ID                   : 1 14 15 16 17 18 19 25 26 27 30 31 34 35 36 37 38 39 40 41 46 47 58 59 60 61 65 66 66 67 68 68
IF                   : 71
INHERITS             : 30 31
INIT                 : 107 108
INT                  : 22
LBRACE               : 1 28 29 30 31 44 45 46 47 72 74 75 83 84 107 108
LBRACKET             : 20 21 21 42 43 43 63 64 64
LPAREN               : 34 35 36 37 65 66 67 68 72 74 77 78 83 84 84 97
MAIN                 : 1
MINUS                : 93 102
OR                   : 86
PLUS                 : 92 101
POINT                : 60 61 66 68
PROGRAM              : 1
RBRACE               : 1 28 29 30 31 44 45 46 47 72 74 75 83 84 107 108
RBRACKET             : 20 21 21 42 43 43 63 64 64
READ                 : 77
RELOP                : 90
RETURN               : 46 47
RPAREN               : 34 35 36 37 65 66 67 68 72 74 77 78 83 84 84 97
SEMICOLON            : 10 11 12 13 46 47 48 49 77 78
THEN                 : 72 74
TIMES                : 95
TWOPOINTS            : 1
UNTIL                : 84
VAR                  : 9
VOID                 : 34 35
WHILE                : 83
WRITE                : 78
error                : 

Nonterminals, with rules where they appear

a_exp                : 89 90 90 92 93
add_array_var_params : 42
add_array_variable   : 20
add_class            : 1 28 29
add_function         : 34 35 36 37
add_inherit_class    : 30 31
add_init             : 107 108
add_matrix_var_params : 43
add_matrix_variable  : 21
add_variable         : 16 17 38 39
assignation          : 48 84
body                 : 34 35 36 37
call                 : 49 98
call_aux             : 67 68 70
classes              : 2 27
classes_aux          : 26 27
complex_type         : 12 13
condition            : 52
condition_aux        : 71 74
condition_aux_2      : 73
condition_aux_3      : 72
cte                  : 100 101 102
dec_vars             : 5 28 30 44 47 108
dec_vars_aux         : 9 11 13
empty                : 3 6 8 76
exp                  : 57 63 64 64 69 70 72 74 79 80 83 84 86 97
factor               : 94 95 96
factor_aux           : 99
for                  : 54
functions            : 7 28 29 30 31 33
functions_aux        : 32 33
init                 : 1
l_exp                : 87 88
n_exp                : 85 86 88
params               : 34 37 39 41
params_aux           : 40 41
pop_op               : 86 88 90 92 93 95 96
pop_paren            : 97
program              : 0
program_body         : 1
program_body_funct   : 4
program_body_vars    : 4
program_classes      : 1
push_op              : 86 88 90 92 93 95 96
push_paren           : 97
push_var             : 58 104 105 106
read                 : 50
simple_type          : 10 11 36 37 38 39 40 41
statutes             : 55 56
statutes_aux         : 44 45 46 47 56 72 74 75 83 84 107 108
term                 : 91 92 93 95 96
var                  : 57 77 103
var_aux              : 59
var_aux_2            : 61 62
vars_complex_type    : 12 13 15
vars_simple_type     : 10 11 17 19
vars_simple_type_aux : 18 19
while                : 53
write                : 51
write_aux            : 78 80 82

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID TWOPOINTS program_classes MAIN add_class LBRACE program_body init RBRACE END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID TWOPOINTS program_classes MAIN add_class LBRACE program_body init RBRACE END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . TWOPOINTS program_classes MAIN add_class LBRACE program_body init RBRACE END

    TWOPOINTS       shift and go to state 4


state 4

    (1) program -> PROGRAM ID TWOPOINTS . program_classes MAIN add_class LBRACE program_body init RBRACE END
    (2) program_classes -> . classes
    (3) program_classes -> . empty
    (26) classes -> . CLASS ID classes_aux
    (27) classes -> . CLASS ID classes_aux classes
    (109) empty -> .

    CLASS           shift and go to state 8
    MAIN            reduce using rule 109 (empty -> .)

    program_classes                shift and go to state 5
    classes                        shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID TWOPOINTS program_classes . MAIN add_class LBRACE program_body init RBRACE END

    MAIN            shift and go to state 9


state 6

    (2) program_classes -> classes .

    MAIN            reduce using rule 2 (program_classes -> classes .)


state 7

    (3) program_classes -> empty .

    MAIN            reduce using rule 3 (program_classes -> empty .)


state 8

    (26) classes -> CLASS . ID classes_aux
    (27) classes -> CLASS . ID classes_aux classes

    ID              shift and go to state 10


state 9

    (1) program -> PROGRAM ID TWOPOINTS program_classes MAIN . add_class LBRACE program_body init RBRACE END
    (117) add_class -> .

    LBRACE          reduce using rule 117 (add_class -> .)

    add_class                      shift and go to state 11

state 10

    (26) classes -> CLASS ID . classes_aux
    (27) classes -> CLASS ID . classes_aux classes
    (28) classes_aux -> . add_class LBRACE dec_vars functions RBRACE
    (29) classes_aux -> . add_class LBRACE functions RBRACE
    (30) classes_aux -> . INHERITS ID add_inherit_class LBRACE dec_vars functions RBRACE
    (31) classes_aux -> . INHERITS ID add_inherit_class LBRACE functions RBRACE
    (117) add_class -> .

    INHERITS        shift and go to state 14
    LBRACE          reduce using rule 117 (add_class -> .)

    classes_aux                    shift and go to state 12
    add_class                      shift and go to state 13

state 11

    (1) program -> PROGRAM ID TWOPOINTS program_classes MAIN add_class . LBRACE program_body init RBRACE END

    LBRACE          shift and go to state 15


state 12

    (26) classes -> CLASS ID classes_aux .
    (27) classes -> CLASS ID classes_aux . classes
    (26) classes -> . CLASS ID classes_aux
    (27) classes -> . CLASS ID classes_aux classes

    MAIN            reduce using rule 26 (classes -> CLASS ID classes_aux .)
    CLASS           shift and go to state 8

    classes                        shift and go to state 16

state 13

    (28) classes_aux -> add_class . LBRACE dec_vars functions RBRACE
    (29) classes_aux -> add_class . LBRACE functions RBRACE

    LBRACE          shift and go to state 17


state 14

    (30) classes_aux -> INHERITS . ID add_inherit_class LBRACE dec_vars functions RBRACE
    (31) classes_aux -> INHERITS . ID add_inherit_class LBRACE functions RBRACE

    ID              shift and go to state 18


state 15

    (1) program -> PROGRAM ID TWOPOINTS program_classes MAIN add_class LBRACE . program_body init RBRACE END
    (4) program_body -> . program_body_vars program_body_funct
    (5) program_body_vars -> . dec_vars
    (6) program_body_vars -> . empty
    (9) dec_vars -> . VAR dec_vars_aux
    (109) empty -> .

    VAR             shift and go to state 23
    FUNCT           reduce using rule 109 (empty -> .)
    INIT            reduce using rule 109 (empty -> .)

    program_body                   shift and go to state 19
    program_body_vars              shift and go to state 20
    dec_vars                       shift and go to state 21
    empty                          shift and go to state 22

state 16

    (27) classes -> CLASS ID classes_aux classes .

    MAIN            reduce using rule 27 (classes -> CLASS ID classes_aux classes .)


state 17

    (28) classes_aux -> add_class LBRACE . dec_vars functions RBRACE
    (29) classes_aux -> add_class LBRACE . functions RBRACE
    (9) dec_vars -> . VAR dec_vars_aux
    (32) functions -> . FUNCT functions_aux
    (33) functions -> . FUNCT functions_aux functions

    VAR             shift and go to state 23
    FUNCT           shift and go to state 26

    dec_vars                       shift and go to state 24
    functions                      shift and go to state 25

state 18

    (30) classes_aux -> INHERITS ID . add_inherit_class LBRACE dec_vars functions RBRACE
    (31) classes_aux -> INHERITS ID . add_inherit_class LBRACE functions RBRACE
    (118) add_inherit_class -> .

    LBRACE          reduce using rule 118 (add_inherit_class -> .)

    add_inherit_class              shift and go to state 27

state 19

    (1) program -> PROGRAM ID TWOPOINTS program_classes MAIN add_class LBRACE program_body . init RBRACE END
    (107) init -> . INIT add_init LBRACE statutes_aux RBRACE
    (108) init -> . INIT add_init LBRACE dec_vars statutes_aux RBRACE

    INIT            shift and go to state 29

    init                           shift and go to state 28

state 20

    (4) program_body -> program_body_vars . program_body_funct
    (7) program_body_funct -> . functions
    (8) program_body_funct -> . empty
    (32) functions -> . FUNCT functions_aux
    (33) functions -> . FUNCT functions_aux functions
    (109) empty -> .

    FUNCT           shift and go to state 26
    INIT            reduce using rule 109 (empty -> .)

    program_body_funct             shift and go to state 30
    functions                      shift and go to state 31
    empty                          shift and go to state 32

state 21

    (5) program_body_vars -> dec_vars .

    FUNCT           reduce using rule 5 (program_body_vars -> dec_vars .)
    INIT            reduce using rule 5 (program_body_vars -> dec_vars .)


state 22

    (6) program_body_vars -> empty .

    FUNCT           reduce using rule 6 (program_body_vars -> empty .)
    INIT            reduce using rule 6 (program_body_vars -> empty .)


state 23

    (9) dec_vars -> VAR . dec_vars_aux
    (10) dec_vars_aux -> . simple_type vars_simple_type SEMICOLON
    (11) dec_vars_aux -> . simple_type vars_simple_type SEMICOLON dec_vars_aux
    (12) dec_vars_aux -> . complex_type vars_complex_type SEMICOLON
    (13) dec_vars_aux -> . complex_type vars_complex_type SEMICOLON dec_vars_aux
    (22) simple_type -> . INT
    (23) simple_type -> . FLOAT
    (24) simple_type -> . CHAR
    (25) complex_type -> . ID

    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    CHAR            shift and go to state 38
    ID              shift and go to state 39

    dec_vars_aux                   shift and go to state 33
    simple_type                    shift and go to state 34
    complex_type                   shift and go to state 35

state 24

    (28) classes_aux -> add_class LBRACE dec_vars . functions RBRACE
    (32) functions -> . FUNCT functions_aux
    (33) functions -> . FUNCT functions_aux functions

    FUNCT           shift and go to state 26

    functions                      shift and go to state 40

state 25

    (29) classes_aux -> add_class LBRACE functions . RBRACE

    RBRACE          shift and go to state 41


state 26

    (32) functions -> FUNCT . functions_aux
    (33) functions -> FUNCT . functions_aux functions
    (34) functions_aux -> . VOID ID add_function LPAREN params RPAREN body
    (35) functions_aux -> . VOID ID add_function LPAREN RPAREN body
    (36) functions_aux -> . simple_type ID add_function LPAREN RPAREN body
    (37) functions_aux -> . simple_type ID add_function LPAREN params RPAREN body
    (22) simple_type -> . INT
    (23) simple_type -> . FLOAT
    (24) simple_type -> . CHAR

    VOID            shift and go to state 43
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    CHAR            shift and go to state 38

    functions_aux                  shift and go to state 42
    simple_type                    shift and go to state 44

state 27

    (30) classes_aux -> INHERITS ID add_inherit_class . LBRACE dec_vars functions RBRACE
    (31) classes_aux -> INHERITS ID add_inherit_class . LBRACE functions RBRACE

    LBRACE          shift and go to state 45


state 28

    (1) program -> PROGRAM ID TWOPOINTS program_classes MAIN add_class LBRACE program_body init . RBRACE END

    RBRACE          shift and go to state 46


state 29

    (107) init -> INIT . add_init LBRACE statutes_aux RBRACE
    (108) init -> INIT . add_init LBRACE dec_vars statutes_aux RBRACE
    (116) add_init -> .

    LBRACE          reduce using rule 116 (add_init -> .)

    add_init                       shift and go to state 47

state 30

    (4) program_body -> program_body_vars program_body_funct .

    INIT            reduce using rule 4 (program_body -> program_body_vars program_body_funct .)


state 31

    (7) program_body_funct -> functions .

    INIT            reduce using rule 7 (program_body_funct -> functions .)


state 32

    (8) program_body_funct -> empty .

    INIT            reduce using rule 8 (program_body_funct -> empty .)


state 33

    (9) dec_vars -> VAR dec_vars_aux .

    FUNCT           reduce using rule 9 (dec_vars -> VAR dec_vars_aux .)
    INIT            reduce using rule 9 (dec_vars -> VAR dec_vars_aux .)
    ASSIGN          reduce using rule 9 (dec_vars -> VAR dec_vars_aux .)
    CALL            reduce using rule 9 (dec_vars -> VAR dec_vars_aux .)
    READ            reduce using rule 9 (dec_vars -> VAR dec_vars_aux .)
    WRITE           reduce using rule 9 (dec_vars -> VAR dec_vars_aux .)
    IF              reduce using rule 9 (dec_vars -> VAR dec_vars_aux .)
    WHILE           reduce using rule 9 (dec_vars -> VAR dec_vars_aux .)
    FROM            reduce using rule 9 (dec_vars -> VAR dec_vars_aux .)


state 34

    (10) dec_vars_aux -> simple_type . vars_simple_type SEMICOLON
    (11) dec_vars_aux -> simple_type . vars_simple_type SEMICOLON dec_vars_aux
    (16) vars_simple_type -> . ID add_variable
    (17) vars_simple_type -> . ID add_variable COMMA vars_simple_type
    (18) vars_simple_type -> . ID vars_simple_type_aux
    (19) vars_simple_type -> . ID vars_simple_type_aux COMMA vars_simple_type

    ID              shift and go to state 49

    vars_simple_type               shift and go to state 48

state 35

    (12) dec_vars_aux -> complex_type . vars_complex_type SEMICOLON
    (13) dec_vars_aux -> complex_type . vars_complex_type SEMICOLON dec_vars_aux
    (14) vars_complex_type -> . ID
    (15) vars_complex_type -> . ID COMMA vars_complex_type

    ID              shift and go to state 51

    vars_complex_type              shift and go to state 50

state 36

    (22) simple_type -> INT .

    ID              reduce using rule 22 (simple_type -> INT .)


state 37

    (23) simple_type -> FLOAT .

    ID              reduce using rule 23 (simple_type -> FLOAT .)


state 38

    (24) simple_type -> CHAR .

    ID              reduce using rule 24 (simple_type -> CHAR .)


state 39

    (25) complex_type -> ID .

    ID              reduce using rule 25 (complex_type -> ID .)


state 40

    (28) classes_aux -> add_class LBRACE dec_vars functions . RBRACE

    RBRACE          shift and go to state 52


state 41

    (29) classes_aux -> add_class LBRACE functions RBRACE .

    CLASS           reduce using rule 29 (classes_aux -> add_class LBRACE functions RBRACE .)
    MAIN            reduce using rule 29 (classes_aux -> add_class LBRACE functions RBRACE .)


state 42

    (32) functions -> FUNCT functions_aux .
    (33) functions -> FUNCT functions_aux . functions
    (32) functions -> . FUNCT functions_aux
    (33) functions -> . FUNCT functions_aux functions

    RBRACE          reduce using rule 32 (functions -> FUNCT functions_aux .)
    INIT            reduce using rule 32 (functions -> FUNCT functions_aux .)
    FUNCT           shift and go to state 26

    functions                      shift and go to state 53

state 43

    (34) functions_aux -> VOID . ID add_function LPAREN params RPAREN body
    (35) functions_aux -> VOID . ID add_function LPAREN RPAREN body

    ID              shift and go to state 54


state 44

    (36) functions_aux -> simple_type . ID add_function LPAREN RPAREN body
    (37) functions_aux -> simple_type . ID add_function LPAREN params RPAREN body

    ID              shift and go to state 55


state 45

    (30) classes_aux -> INHERITS ID add_inherit_class LBRACE . dec_vars functions RBRACE
    (31) classes_aux -> INHERITS ID add_inherit_class LBRACE . functions RBRACE
    (9) dec_vars -> . VAR dec_vars_aux
    (32) functions -> . FUNCT functions_aux
    (33) functions -> . FUNCT functions_aux functions

    VAR             shift and go to state 23
    FUNCT           shift and go to state 26

    dec_vars                       shift and go to state 56
    functions                      shift and go to state 57

state 46

    (1) program -> PROGRAM ID TWOPOINTS program_classes MAIN add_class LBRACE program_body init RBRACE . END

    END             shift and go to state 58


state 47

    (107) init -> INIT add_init . LBRACE statutes_aux RBRACE
    (108) init -> INIT add_init . LBRACE dec_vars statutes_aux RBRACE

    LBRACE          shift and go to state 59


state 48

    (10) dec_vars_aux -> simple_type vars_simple_type . SEMICOLON
    (11) dec_vars_aux -> simple_type vars_simple_type . SEMICOLON dec_vars_aux

    SEMICOLON       shift and go to state 60


state 49

    (16) vars_simple_type -> ID . add_variable
    (17) vars_simple_type -> ID . add_variable COMMA vars_simple_type
    (18) vars_simple_type -> ID . vars_simple_type_aux
    (19) vars_simple_type -> ID . vars_simple_type_aux COMMA vars_simple_type
    (110) add_variable -> .
    (20) vars_simple_type_aux -> . LBRACKET CTEI RBRACKET add_array_variable
    (21) vars_simple_type_aux -> . LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET add_matrix_variable

    COMMA           reduce using rule 110 (add_variable -> .)
    SEMICOLON       reduce using rule 110 (add_variable -> .)
    LBRACKET        shift and go to state 63

    add_variable                   shift and go to state 61
    vars_simple_type_aux           shift and go to state 62

state 50

    (12) dec_vars_aux -> complex_type vars_complex_type . SEMICOLON
    (13) dec_vars_aux -> complex_type vars_complex_type . SEMICOLON dec_vars_aux

    SEMICOLON       shift and go to state 64


state 51

    (14) vars_complex_type -> ID .
    (15) vars_complex_type -> ID . COMMA vars_complex_type

    SEMICOLON       reduce using rule 14 (vars_complex_type -> ID .)
    COMMA           shift and go to state 65


state 52

    (28) classes_aux -> add_class LBRACE dec_vars functions RBRACE .

    CLASS           reduce using rule 28 (classes_aux -> add_class LBRACE dec_vars functions RBRACE .)
    MAIN            reduce using rule 28 (classes_aux -> add_class LBRACE dec_vars functions RBRACE .)


state 53

    (33) functions -> FUNCT functions_aux functions .

    RBRACE          reduce using rule 33 (functions -> FUNCT functions_aux functions .)
    INIT            reduce using rule 33 (functions -> FUNCT functions_aux functions .)


state 54

    (34) functions_aux -> VOID ID . add_function LPAREN params RPAREN body
    (35) functions_aux -> VOID ID . add_function LPAREN RPAREN body
    (115) add_function -> .

    LPAREN          reduce using rule 115 (add_function -> .)

    add_function                   shift and go to state 66

state 55

    (36) functions_aux -> simple_type ID . add_function LPAREN RPAREN body
    (37) functions_aux -> simple_type ID . add_function LPAREN params RPAREN body
    (115) add_function -> .

    LPAREN          reduce using rule 115 (add_function -> .)

    add_function                   shift and go to state 67

state 56

    (30) classes_aux -> INHERITS ID add_inherit_class LBRACE dec_vars . functions RBRACE
    (32) functions -> . FUNCT functions_aux
    (33) functions -> . FUNCT functions_aux functions

    FUNCT           shift and go to state 26

    functions                      shift and go to state 68

state 57

    (31) classes_aux -> INHERITS ID add_inherit_class LBRACE functions . RBRACE

    RBRACE          shift and go to state 69


state 58

    (1) program -> PROGRAM ID TWOPOINTS program_classes MAIN add_class LBRACE program_body init RBRACE END .

    $end            reduce using rule 1 (program -> PROGRAM ID TWOPOINTS program_classes MAIN add_class LBRACE program_body init RBRACE END .)


state 59

    (107) init -> INIT add_init LBRACE . statutes_aux RBRACE
    (108) init -> INIT add_init LBRACE . dec_vars statutes_aux RBRACE
    (55) statutes_aux -> . statutes
    (56) statutes_aux -> . statutes statutes_aux
    (9) dec_vars -> . VAR dec_vars_aux
    (48) statutes -> . ASSIGN assignation SEMICOLON
    (49) statutes -> . CALL call SEMICOLON
    (50) statutes -> . read
    (51) statutes -> . write
    (52) statutes -> . condition
    (53) statutes -> . while
    (54) statutes -> . for
    (77) read -> . READ LPAREN var RPAREN SEMICOLON
    (78) write -> . WRITE LPAREN write_aux RPAREN SEMICOLON
    (71) condition -> . IF condition_aux
    (83) while -> . WHILE LPAREN exp RPAREN DO LBRACE statutes_aux RBRACE
    (84) for -> . FROM LPAREN assignation RPAREN UNTIL LPAREN exp RPAREN DO LBRACE statutes_aux RBRACE

    VAR             shift and go to state 23
    ASSIGN          shift and go to state 73
    CALL            shift and go to state 74
    READ            shift and go to state 80
    WRITE           shift and go to state 81
    IF              shift and go to state 82
    WHILE           shift and go to state 83
    FROM            shift and go to state 84

    statutes_aux                   shift and go to state 70
    dec_vars                       shift and go to state 71
    statutes                       shift and go to state 72
    read                           shift and go to state 75
    write                          shift and go to state 76
    condition                      shift and go to state 77
    while                          shift and go to state 78
    for                            shift and go to state 79

state 60

    (10) dec_vars_aux -> simple_type vars_simple_type SEMICOLON .
    (11) dec_vars_aux -> simple_type vars_simple_type SEMICOLON . dec_vars_aux
    (10) dec_vars_aux -> . simple_type vars_simple_type SEMICOLON
    (11) dec_vars_aux -> . simple_type vars_simple_type SEMICOLON dec_vars_aux
    (12) dec_vars_aux -> . complex_type vars_complex_type SEMICOLON
    (13) dec_vars_aux -> . complex_type vars_complex_type SEMICOLON dec_vars_aux
    (22) simple_type -> . INT
    (23) simple_type -> . FLOAT
    (24) simple_type -> . CHAR
    (25) complex_type -> . ID

    FUNCT           reduce using rule 10 (dec_vars_aux -> simple_type vars_simple_type SEMICOLON .)
    INIT            reduce using rule 10 (dec_vars_aux -> simple_type vars_simple_type SEMICOLON .)
    ASSIGN          reduce using rule 10 (dec_vars_aux -> simple_type vars_simple_type SEMICOLON .)
    CALL            reduce using rule 10 (dec_vars_aux -> simple_type vars_simple_type SEMICOLON .)
    READ            reduce using rule 10 (dec_vars_aux -> simple_type vars_simple_type SEMICOLON .)
    WRITE           reduce using rule 10 (dec_vars_aux -> simple_type vars_simple_type SEMICOLON .)
    IF              reduce using rule 10 (dec_vars_aux -> simple_type vars_simple_type SEMICOLON .)
    WHILE           reduce using rule 10 (dec_vars_aux -> simple_type vars_simple_type SEMICOLON .)
    FROM            reduce using rule 10 (dec_vars_aux -> simple_type vars_simple_type SEMICOLON .)
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    CHAR            shift and go to state 38
    ID              shift and go to state 39

    simple_type                    shift and go to state 34
    dec_vars_aux                   shift and go to state 85
    complex_type                   shift and go to state 35

state 61

    (16) vars_simple_type -> ID add_variable .
    (17) vars_simple_type -> ID add_variable . COMMA vars_simple_type

    SEMICOLON       reduce using rule 16 (vars_simple_type -> ID add_variable .)
    COMMA           shift and go to state 86


state 62

    (18) vars_simple_type -> ID vars_simple_type_aux .
    (19) vars_simple_type -> ID vars_simple_type_aux . COMMA vars_simple_type

    SEMICOLON       reduce using rule 18 (vars_simple_type -> ID vars_simple_type_aux .)
    COMMA           shift and go to state 87


state 63

    (20) vars_simple_type_aux -> LBRACKET . CTEI RBRACKET add_array_variable
    (21) vars_simple_type_aux -> LBRACKET . CTEI RBRACKET LBRACKET CTEI RBRACKET add_matrix_variable

    CTEI            shift and go to state 88


state 64

    (12) dec_vars_aux -> complex_type vars_complex_type SEMICOLON .
    (13) dec_vars_aux -> complex_type vars_complex_type SEMICOLON . dec_vars_aux
    (10) dec_vars_aux -> . simple_type vars_simple_type SEMICOLON
    (11) dec_vars_aux -> . simple_type vars_simple_type SEMICOLON dec_vars_aux
    (12) dec_vars_aux -> . complex_type vars_complex_type SEMICOLON
    (13) dec_vars_aux -> . complex_type vars_complex_type SEMICOLON dec_vars_aux
    (22) simple_type -> . INT
    (23) simple_type -> . FLOAT
    (24) simple_type -> . CHAR
    (25) complex_type -> . ID

    FUNCT           reduce using rule 12 (dec_vars_aux -> complex_type vars_complex_type SEMICOLON .)
    INIT            reduce using rule 12 (dec_vars_aux -> complex_type vars_complex_type SEMICOLON .)
    ASSIGN          reduce using rule 12 (dec_vars_aux -> complex_type vars_complex_type SEMICOLON .)
    CALL            reduce using rule 12 (dec_vars_aux -> complex_type vars_complex_type SEMICOLON .)
    READ            reduce using rule 12 (dec_vars_aux -> complex_type vars_complex_type SEMICOLON .)
    WRITE           reduce using rule 12 (dec_vars_aux -> complex_type vars_complex_type SEMICOLON .)
    IF              reduce using rule 12 (dec_vars_aux -> complex_type vars_complex_type SEMICOLON .)
    WHILE           reduce using rule 12 (dec_vars_aux -> complex_type vars_complex_type SEMICOLON .)
    FROM            reduce using rule 12 (dec_vars_aux -> complex_type vars_complex_type SEMICOLON .)
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    CHAR            shift and go to state 38
    ID              shift and go to state 39

    complex_type                   shift and go to state 35
    dec_vars_aux                   shift and go to state 89
    simple_type                    shift and go to state 34

state 65

    (15) vars_complex_type -> ID COMMA . vars_complex_type
    (14) vars_complex_type -> . ID
    (15) vars_complex_type -> . ID COMMA vars_complex_type

    ID              shift and go to state 51

    vars_complex_type              shift and go to state 90

state 66

    (34) functions_aux -> VOID ID add_function . LPAREN params RPAREN body
    (35) functions_aux -> VOID ID add_function . LPAREN RPAREN body

    LPAREN          shift and go to state 91


state 67

    (36) functions_aux -> simple_type ID add_function . LPAREN RPAREN body
    (37) functions_aux -> simple_type ID add_function . LPAREN params RPAREN body

    LPAREN          shift and go to state 92


state 68

    (30) classes_aux -> INHERITS ID add_inherit_class LBRACE dec_vars functions . RBRACE

    RBRACE          shift and go to state 93


state 69
